--- a/management_system/views/patient_view.xml
+++ b/management_system/views/patient_view.xml
@@ -14,7 +14,7 @@
         </field>
     </record>
 
-    <menuitem id="menu_patient" name="Patient" parent="menu_patient_master" sequence="0" />
-   
+    
+   <menuitem id="menu_patient" name="Patient" action="action_hospital_patient" parent="menu_patient_master" sequence="0" />
 
 </odoo>
