--- a/management_system/views/appointment_view.xml
+++ b/management_system/views/appointment_view.xml
@@ -30,6 +30,9 @@
     <field name="arch" type="xml">
       <form>
       <header>
+           <button name="action_in_consultaion" string="In Consultaton" type="object"/>
+           <button name="action_done" string="Done" type="object"/>
+           <button name="action_cancel" string="Cancel" type="object"/>
            <field name="state" widget="statusbar" nolabel="1" options="{'clickable':'1'}" statusbar_visible="draft,in_consultation,done"/>
       </header>
       <sheet>
@@ -53,7 +56,7 @@
          <page name="prescription" string="Prescription">
            <group>
              <field name="patient_id"/>
-               <field name="ref"/>
+             <field name="ref"/>
            </group>
              
          </page>
