--- a/management_system/views/appointment_view.xml
+++ b/management_system/views/appointment_view.xml
@@ -19,6 +19,7 @@
       <field name="patient_id"/>
        <field name="doctor_name"/>
        <field name="date"/>
+       <field name="state"  decoration-success="state in ('done' , 'in_consultation')" decoration-info="state=='draft'" decoration-danger="state=='cancel'" widget="badge"/>
 
       </tree>
       </field>
@@ -30,9 +31,9 @@
     <field name="arch" type="xml">
       <form>
       <header>
-           <button name="action_in_consultaion" string="In Consultaton" type="object"/>
-           <button name="action_done" string="Done" type="object"/>
-           <button name="action_cancel" string="Cancel" type="object"/>
+           <button name="action_in_consultaion" string="In Consultaton" type="object" states='draft'/>
+           <button name="action_done" string="Done" type="object" states='in_consultation'/>
+           <button name="action_cancel" string="Cancel" type="object" states='draft, in_consultation'/>
            <field name="state" widget="statusbar" nolabel="1" options="{'clickable':'1'}" statusbar_visible="draft,in_consultation,done"/>
       </header>
       <sheet>
@@ -63,8 +64,23 @@
       
           <page name="pharmacy" string="Pharmacy">
             <group >
-               <field name="doctor_name"/>
-                <field name="date"/>
+               <field name="pharmacy_line_ids">
+                 <tree editable="bottom">
+                     <field name="product_id"/>
+                     <field name="price_unit"/>
+                     <field name="qty"/>
+                 </tree>
+                 <form>
+                   <group>
+                     
+                     <field name="product_id"/>
+                     <field name="price_unit"/>
+                     <field name="qty"/>
+                     
+                   </group>
+                 </form>
+               </field>
+               <field name="date"/>
             </group>
            
          </page>
