--- a/management_system/views/patient_view.xml
+++ b/management_system/views/patient_view.xml
@@ -21,6 +21,7 @@
       <field name="model">hospital.patient</field>
       <field name="arch" type="xml">
       <tree>
+        <field name="image" ></field>
         <field name="name" string="Patient"/>
         <field name="age" string="Age List"/>
         <field name="gender" string="Gender  List"/>
@@ -35,8 +36,10 @@
     <field name="arch" type="xml">
       <form>
       <sheet>
+      <field name="image" widget="image" class="oe_avatar"/>
        <group>
           <group>
+             
              <field name="name"/>
              <field name="date_of_birth"/>
              <field name="age"/>
