--- a/management_system/views/menu.xml
+++ b/management_system/views/menu.xml
@@ -3,6 +3,10 @@
 
     <menuitem id="menu_hospital_root" name="Hospital" sequence="0"/>
     <menuitem id="menu_patient_master" name="Patient Details" parent="menu_hospital_root" sequence="0" />
-    
+    <menuitem
+        id="menu_configuration"
+        name="Configuration"
+        parent = "menu_hospital_root"
+        sequence="100"/>
 
 </odoo>
