--- a/management_system/views/patient_view.xml
+++ b/management_system/views/patient_view.xml
@@ -21,11 +21,12 @@
       <field name="model">hospital.patient</field>
       <field name="arch" type="xml">
       <tree>
-        <field name="image" ></field>
+        <field name="image" />
         <field name="name" string="Patient"/>
         <field name="age" string="Age List"/>
         <field name="gender" string="Gender  List"/>
         <field name="ref" string="Reference"/>
+         <field name="tag_ids"  widget='many2many_tags'/>
       </tree>
       </field>
    </record>
@@ -47,6 +48,7 @@
           <group>
              <field name="gender"/>
              <field name= "ref"/>
+             <field name="tag_ids" widget='many2many_tags'/>
           </group>
       </group>
       </sheet>
