--- a/management_system/views/menu.xml
+++ b/management_system/views/menu.xml
@@ -8,5 +8,11 @@
         name="Configuration"
         parent = "menu_hospital_root"
         sequence="100"/>
+     <menuitem
+        id="menu_cancel_appointment"
+        name="Cancellation"
+        parent = "menu_patient_master"
+        action = "action_cancel_appointment"
+        sequence="30"/>
 
 </odoo>
